<resources>
    <string name="app_name">WaterBalanceApp</string>
    <string name="title_activity_main_overview">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_graph">Records Graph</string>
    <string name="delete_all_records">Delete Records History</string>
    <string name="goal_in_millilitres">Goal in millilitres</string>
    <string name="set_goal_in_millilitres">Set goal</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in">Sign in</string>
    <string name="press_here_to_sign_out_from_your_account">Press here to sign out from your account</string>
    <string name="water_balance">Water Balance</string>
    <string name="reset">reset</string>
    <string name="_100mlIncrease">+100</string>
    <string name="_100mlDecrease">-100</string>
    <string name="_25mlDecrease">-25</string>
    <string name="_25mlIncrease">+25</string>
    <string name="_5_decrease">-5</string>
    <string name="_5_increase">+5</string>
</resources>