<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:indeterminateOnly="false"
        android:progressDrawable="@drawable/circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:progress="60" />

    <TextView
        android:id="@+id/text_progress"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/progress_bar"
        app:layout_constraintEnd_toEndOf="@+id/progress_bar"
        app:layout_constraintStart_toStartOf="@+id/progress_bar"
        app:layout_constraintTop_toTopOf="@+id/progress_bar">
    </TextView>

    <Button
        android:id="@+id/button_decr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/_5_decrease"
        app:layout_constraintStart_toStartOf="@+id/progress_bar"
        app:layout_constraintTop_toBottomOf="@+id/progress_bar" />
    <Button
        android:id="@+id/button_incr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5_increase"
        app:layout_constraintEnd_toEndOf="@+id/progress_bar"
        app:layout_constraintTop_toBottomOf="@+id/progress_bar" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_baseline_opacity_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/teal_700" />

    <Button
        android:id="@+id/save_record_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/green"
        android:text="@string/fui_button_text_save"
        app:layout_constraintEnd_toEndOf="@+id/button_inc_100"
        app:layout_constraintTop_toBottomOf="@+id/button_inc_100" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:layout_marginTop="15dp"
        android:text="@string/reset"
        app:layout_constraintStart_toStartOf="@+id/button_decr_100"
        app:layout_constraintTop_toBottomOf="@+id/button_decr_100" />

    <Button
        android:id="@+id/button_inc_100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_100mlIncrease"
        app:layout_constraintEnd_toEndOf="@+id/button_incr_25"
        app:layout_constraintTop_toBottomOf="@+id/button_incr_25" />

    <Button
        android:id="@+id/button_decr_100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/_100mlDecrease"
        app:layout_constraintStart_toStartOf="@+id/button_decr_25"
        app:layout_constraintTop_toBottomOf="@+id/button_decr_25" />

    <Button
        android:id="@+id/button_decr_25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_25mlDecrease"
        app:layout_constraintStart_toStartOf="@+id/button_decr"
        app:layout_constraintTop_toBottomOf="@+id/button_decr" />

    <Button
        android:id="@+id/button_incr_25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_25mlIncrease"
        app:layout_constraintEnd_toEndOf="@+id/button_incr"
        app:layout_constraintTop_toBottomOf="@+id/button_incr" />

</androidx.constraintlayout.widget.ConstraintLayout>

